# Orthanc_mailer

./: LICENSE  README.md  cronjob.sh  deploy-config.sh  deploy.env.sh  deploy.sh  deploy.yml  log_monitor.sh
deployment/: .env.template  Dockerfile  docker-compose.yml  orthanc-ingest.json.template  orthanc-processing.json.template  orthanc.json.template  watcher.py
deployment/plugin/: Dockerfile.builder  Dockerfile.python  build-plugin.sh
deployment/plugin/archive-plugin/: archive.py
deployment/plugin/export-plugin/: CMakeLists.txt  exportplugin.cpp
deployment/plugin/filesender-plugin/: CMakeLists.txt  filesender.cpp
deployment/plugin/orthanc-python-plugin/: CMakeLists.txt
deployment/plugin/queue-plugin/: CMakeLists.txt  queueplugin.cpp
deployment/switchfilesender/filesender_cli/: filesender.py
deployment/switchfilesender/filesender_cli/.filesender/: filesender.py.ini
deployment/switchfilesender/filesender_cli/sdk/jsoncpp/src/jsontestrunner/: CMakeLists.txt
